# accounter

./: .gitignore  AUTHORS  LICENSE  Makefile  README.md  TODO.txt  configure.in  include.mk.in  vsn.mk
ebin/: .gitignore
etc/: yaws.conf
examples/kkss/: accounter.xml  config.xml
examples/kkss/books/1809/: Budget.txt  Kontotabell.txt  Kontotyper.txt  Verifikationer.txt
include/: accounter.hrl
priv/: config.xml
priv/www/: buttons.ssi  footer.ssi  header.ssi  index.yaws  register.yaws  register_post.yaws  reports.yaws  style.css  tables.yaws
src/: Makefile  accounter.app.src  accounter.erl  accounter_app.erl  accounter_check.erl  accounter_csv.erl  accounter_html.erl  accounter_sup.erl  accounter_xml.erl
templates/english/: account_types.csv  accounter.xml  accounts.csv  bindings.xml
templates/svenska/: account_types.csv  accounter.xml  accounts.csv  bindings.xml
www/: accounts_commit.yaws  accounts_edit.yaws  buttons.ssi  header.ssi  index.yaws  register.yaws  register_post.yaws  reports.yaws  tables.yaws  voucher_commit.yaws  voucher_edit.yaws  vouchers_commit.yaws  vouchers_edit.yaws
